css/produkter.css
/**
 * file: css/css.css
 * purpose: styling
 **/

/* Define variables in the :root */
:root {
  --contrast: #000000;
  --backgr: #f9f9f9;
  --lblue: #93dfe4;
  --dblue: #18767c;
}

/* Use your variables on elements */
 main {
   color: var(--contrast);
   background-color: var(--backgr);
 }

 body {
  background-color: var(--backgr);
  margin: 0;
 }

 /* Media Query for Mobile Viewport */
 @media (min-width: 320px),(max-width:500px) {

  h1 {
    font-family: "Pacifico", cursive;
  }
  
   h2, h3, h4, h5, h6{
    font-family: "Montserrat", sans-serif;

   }

   p {
    font-family: "Roboto Slab", serif;
    align-items: center;
  }

  h2{
      font-weight: 700;
      font-size: 1.6rem;
      display: inline-block;
      justify-content: center;
      align-items: center;
      text-align: center;
      margin: 0.5rem;
  }

  h4{
    font-size: 1.2rem;
    display: inline-block;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: auto;
    font-weight: 600;
    color: var(--dblue);
  }

  p{
    font-size: 0.8rem;
    display: inline-block;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: auto;
    
    font-size: medium;
  }
  
 /* Header menu styling start. OBS Få fixet dimensionerne her også */

 .entire-mobil-menu {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: stretch;
  margin: 0;
}

#logo {
    width: 11rem;
    height: auto;
    align-self: center;
}

 .mobil-menu {
  overflow: hidden;
  position: relative;
  font-family: "Montserrat", sans-serif;
}

#menu-links {
  font-family: "Montserrat", sans-serif;
}

.mobil-menu, a {
  float: right;
  display: block;
  color: var(--contrast);
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.mobil-menu a:hover {
  background-color: var(--lblue);
  color: var(--contrast);
}

.mobil-menu a.active {
  background-color: var(--dblue);
  color: var(--backgr);
}

.mobil-menu .icon {
  display: none;
  position:relative
}

.mobil-menu a {display: none;}
.mobil-menu a.icon {
  float: right;
  display: block;
  border-radius: 5px;
}

.mobil-menu.responsive {position: relative;}
.mobil-menu.responsive a.icon {
  position: absolute;
  margin: 1rem;
  right: 0;
  top: 0;
}
.mobil-menu.responsive a {
  float: none;
  display: block;
  text-align: left;
}
 /* Header menu styling slut */

 /* Produkt landing styling start */

 .produkt-landing-container {
  position: relative;
  flex-direction: column;
  display: flex;  
  text-align: center;
  align-items: center;
  background-image: url("images/produkter/produkt-hero-mobil.png"); /* Fix billedvisning problem!*/
  background-repeat: no-repeat;
  background-position: right top;
  background-attachment: fixed;
  min-width: 320px; 
  height: 100vh;
  margin: 3.2rem; 
 }
 
/* Produkt landing styling slut */

/* Produkt katalog styling start */
 .produkt-katalog-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  text-align: center;
  width: 100%;
  margin: 0.5rem;
 }

.button {
  background-color: var(--lblue);
  color: var(--contrast);
  border: none;
  border-radius: 5px;
  padding: 10px 20px;
  align-self: center;
  font-family: "Montserrat", sans-serif;
  font-weight: 600;
  transition-duration: 0.4s;
  cursor: pointer;
}

 .button:hover{
  background-color: var(--dblue);
  color: var(--backgr);
  }
 /* Footer styling slut */

} 

 @media (min-width: 501px) {

  .row {
    display: flex; /* gør elementerne flexible ift. kassen*/
    flex-direction: row; /* sætter elementerne på række */
    align-items: flex-start;
  
    width: 100%;
  }
}

@media (min-width: 770px) {

.mobil-menu a.icon {
  display: none;
}

.mobil-menu a {
  display: block;
}

#menu-links {
  display: flex;
  margin-top: 0.5rem;
  margin-left: 0;
}

.entire-mobil-menu {
  justify-content: space-between;
}

}

